[gd_scene format=3 uid="uid://dvra05ncao6wx"]

[ext_resource type="Script" uid="uid://b64r6vv7yst7" path="res://features/game/game_root_ui.gd" id="1_ve2ou"]
[ext_resource type="PackedScene" uid="uid://yhovkud44iwq" path="res://entities/dialogue_bubble/dialogue_bubble.tscn" id="2_owwi8"]

[node name="GameRootUi" type="Control" unique_id=338586282]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ve2ou")

[node name="MainMarginContainer" type="MarginContainer" parent="." unique_id=1207412309]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ButtonsMarginContainer" type="MarginContainer" parent="MainMarginContainer" unique_id=1924270175]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_bottom = 50

[node name="AnswerVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/ButtonsMarginContainer" unique_id=246525259]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="FirstAnswerButton" type="Button" parent="MainMarginContainer/ButtonsMarginContainer/AnswerVBoxContainer" unique_id=1533272175]
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
autowrap_mode = 2

[node name="SecondAnswerButton" type="Button" parent="MainMarginContainer/ButtonsMarginContainer/AnswerVBoxContainer" unique_id=116351820]
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMarginContainer/ButtonsMarginContainer/AnswerVBoxContainer" unique_id=377313816]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="RotateMarginContainer" type="MarginContainer" parent="MainMarginContainer/ButtonsMarginContainer" unique_id=1361652466]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 20

[node name="RotateAnswersButton" type="Button" parent="MainMarginContainer/ButtonsMarginContainer/RotateMarginContainer" unique_id=776611773]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Rotate"

[node name="DialogueBubbleMarginContainer" type="MarginContainer" parent="." unique_id=231211117]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogueBubble" parent="DialogueBubbleMarginContainer" unique_id=1371914153 instance=ExtResource("2_owwi8")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
